%% Mermaid ER diagram for core prototype tables
erDiagram
  AUTH_USERS ||--o{ JOBS : owns
  JOBS ||--o{ JOB_EVENTS : generates
  DB_HOSTS ||--o{ JOBS : targets
  LOCKS ||--o{ JOBS : guards
  SETTINGS ||--o{ JOBS : config

  AUTH_USERS {
    text user_id PK
    text username
    text user_code
    bool is_admin
    text created_at
    text disabled_at
  }

  JOBS {
    text id PK
    text owner_user_id FK
    text owner_username
    text owner_user_code
    text target
    text status
    text submitted_at
    text started_at
    text completed_at
    text options_json
    int retry_count
    text error_detail
  }

  JOB_EVENTS {
    int id PK
    text job_id FK
    text event_time
    text event_type
    text actor_user_id FK
    text actor_username
    text actor_user_code
    text detail
  }

  DB_HOSTS {
    text dbhost PK
    text credential_ref
    int max_db_count
    int last_known_db_count
    text last_refreshed_at
    text disabled_at
  }

  LOCKS {
    text name PK
    text owner
    text acquired_at
  }

  SETTINGS {
    text key PK
    text value
    text updated_at
  }
